--- a/LanguageSchoolManagement/Menu.xaml
+++ b/LanguageSchoolManagement/Menu.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
         Title="Menu" Height="450" Width="800">
-    <Grid>
-        <StackPanel Background="White" Margin="20,0,21.6,0">
-            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Normal" FontFamily="Times New Roman">
-                <Run FontSize="20" FontWeight="Black" Foreground="Black" >Памятка</Run>
+    <Grid Background="#FFA0C2FF">
+        <StackPanel Background="#FFA0C2FF" Margin="20,0,21.6,0">
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Normal" FontFamily="Rockwell Extra Bold" OpacityMask="#FFF1F1E1">
+                <Run FontSize="20" FontWeight="Black" Foreground="Black" Background="Black" >Памятка:</Run>
                 <LineBreak />
             </TextBlock>
-            <TextBlock TextWrapping="Wrap" TextAlignment="Left" FontStyle="Normal" FontFamily="Times New Roman">
+            <TextBlock TextWrapping="Wrap" TextAlignment="Left" FontStyle="Normal" FontFamily="Rockwell Extra Bold" Height="311" >
                 <Run FontSize="15" FontWeight="Black" Foreground="Black" >Данное приложение моделирует работу курсов иностранного языка. Оно позволяет наглядно рассмотреть процесс разбиения учеников на группы по следующим правилам:  </Run>
                 <LineBreak />
                 <LineBreak />
@@ -29,8 +29,7 @@
                 <Run FontSize="15" FontWeight="Black" Foreground="Black"> Чтобы корректно смоделировать данный процесс, необходимо заполнить все требуемые поля в выбранных формах и вводить корректные данные. В большинство полей необходимо выбрать правильный (подходящий) вариант, за исключением «Имя» и «Фамилия», их заполняют вручную, используя буквы русского или английского алфавита. </Run>
                 <LineBreak />
             </TextBlock >
-            <Button Content="Ok" Click="ButtonOkClick" HorizontalAlignment="Center" FontSize="30" Height="60" Width="60">
-            </Button>
+            <Button Content="Ok" Click="ButtonOkClick" HorizontalAlignment="Center" FontSize="24" Height="46" Width="108" Margin="297,0,345,0" FontFamily="Rockwell Extra Bold" Background="#FF162D6C" Foreground="#FFDCE4F3"/>
         </StackPanel>
     </Grid>
 </Window>
