--- a/LanguageSchoolManagement/Mistake.xaml
+++ b/LanguageSchoolManagement/Mistake.xaml
@@ -7,29 +7,20 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
         Title="Mistake" Height="120" Width="300" Background="#FFCBA8A8" >
-    <Grid>
+    <Grid Background="#FFA0C2FF">
         <Grid.RowDefinitions>
             <RowDefinition Height="37*"/>
             <RowDefinition Height="52*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Background="#FFE2FFFB" Grid.RowSpan="2">
+        <StackPanel Background="#FFA0C2FF" Grid.RowSpan="2">
             <Image Source="mistake.jpg" HorizontalAlignment="Left" VerticalAlignment="Center" Height="82" Width="84" Margin="10,0,0,0"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="111,14,10,29" Width="171" Height="46" Grid.RowSpan="2" >
-            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Normal" FontFamily="Times New Roman" Margin="10,0,0,0" Height="45" RenderTransformOrigin="0.521,-0.276" Foreground="#FF0B257E"><Run FontSize="10" FontWeight="Bold" Text="Some area is empty!" /><LineBreak /><Run FontSize="10" FontWeight="Bold" Text="Fill and try again." /><LineBreak /></TextBlock>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Normal" FontFamily="Times New Roman" Margin="10,0,0,0" Height="45" RenderTransformOrigin="0.521,-0.276" Foreground="#FF0B257E"><Run FontSize="10" FontWeight="Bold" Text="Oooops something going wrong" /><LineBreak /><Run FontSize="10" FontWeight="Bold" Text="We are already working on it!" /><LineBreak /></TextBlock>
         </StackPanel>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="107,0,115,0" Width="70" Grid.Row="1">
-            <Button Content="Ok" Height="20" Width="45" Click="ButtonOkClick" Margin="0,10,7,10" HorizontalAlignment="Right"  VerticalAlignment="Bottom" Foreground="#FF0B1259"  >
-                <Button.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black"/>
-                        <GradientStop Color="White" Offset="1"/>
-                        <GradientStop Color="#FF21C1C9" Offset="0.589"/>
-                        <GradientStop Color="#FFE9F8F9" Offset="0.894"/>
-                    </LinearGradientBrush>
-                </Button.Background>
-            </Button>
+            <Button Content="Ok" Height="20" Width="45" Click="ButtonOkClick" Margin="0,10,7,10" HorizontalAlignment="Right"  VerticalAlignment="Bottom" Foreground="#FFE3E4EC" Background="#FF0B1259" FontFamily="Rockwell Extra Bold" BorderBrush="#FF0B1259"  />
         </StackPanel>
     </Grid>
 </Window>
