--- a/LanguageSchoolManagement/MainWindow.xaml
+++ b/LanguageSchoolManagement/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:LanguageSchoolManagement"
         WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
-        Title="MainWindow" Height="521.732" Width="800" MinWidth="888" MinHeight="571" Background="#FFA0C2FF">
+        Title="MainWindow" Height="521.732" Width="800" MinWidth="900" MinHeight="571" Background="#FFA0C2FF">
 
     <Grid MinHeight="500" Margin="0,0,-8,-21">
 
@@ -33,7 +33,8 @@
         </StackPanel>
 
         <StackPanel>
-            <Button Click="ButtonRulesClick" FontSize="30" Width="111" RenderTransformOrigin="0.569,1.029" Margin="86,120,0,329" Height="111" HorizontalAlignment="Left">
+
+            <Button Click="ButtonRulesClick" FontSize="30" Width="111" RenderTransformOrigin="0.569,1.029" Margin="85,118,692,332" Height="111">
 
                 <Button.Background>
                     <ImageBrush ImageSource="menu.png"/>
@@ -45,9 +46,10 @@
                 </Button.Resources>
 
             </Button>
-
         </StackPanel>
-        <Label Margin="100,236,0,282" Foreground="#FF162D6C" FontFamily="Rockwell Extra Bold" HorizontalAlignment="Left" Width="94" RenderTransformOrigin="0.5,0.5">
+
+
+        <Label Margin="90,238,704,279" Foreground="#FF162D6C" FontFamily="Rockwell Extra Bold" HorizontalAlignment="Center" Width="94" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
