Revert "Merge branch 'main' of https://github.com/WorldCreator892/LanguageSchool"
This reverts commit c9b5303a15d2fa9b279d50947b42067b43a70150, reversing
changes made to d7b04964104a0f21e0606565935dcdd62c1ef455.

--- a/LanguageSchoolManagement/MainWindow.xaml
+++ b/LanguageSchoolManagement/MainWindow.xaml
@@ -19,7 +19,7 @@
                         <RotateTransform Angle="0.057"/>
                         <TranslateTransform/>
                     </TransformGroup>
-                </TextBlock.RenderTransform><Run FontWeight="Bold" Text="Welcome to our Language School Management Simulator!" /><LineBreak /><LineBreak /><Run FontWeight="Bold" Text="To begin generation press the button below:" /><LineBreak /></TextBlock>
+                </TextBlock.RenderTransform><Run FontWeight="Bold" Text="Welcome to our Language School Management Simulator!" /><LineBreak /><LineBreak /><Run FontWeight="Bold" Text="To begin the simulation insert generation parameters using the form below:" /><LineBreak /></TextBlock>
         </StackPanel>
 
         <StackPanel>
